修改文件: _posts/2020-08-12-MCD.md

--- a/_posts/2020-08-12-MCD.md
+++ b/_posts/2020-08-12-MCD.md
@@ -11,8 +11,7 @@ tags:
 ---
 # 一、打歌节目规则及投票组成
 ### MCD事前投票占比10%，中饭可以参与的投票主要有日网、全球网和WHOSFAN投票（APP）
-![规则](./images/MCD.jpg)
----
+![enter description here](./images/MCD.jpg)
 # 二、全球网投票
 ### 1.投票时间：每周五下午 1 点至第二周周一上午 8 点 
 ### 2.投票地址：[https://www.mwave.me/cn/](https://www.mwave.me/cn/)
