修改文件: _posts/2020-08-10-南韩打歌节目计分规则.md

--- a/_posts/2020-08-10-南韩打歌节目计分规则.md
+++ b/_posts/2020-08-10-南韩打歌节目计分规则.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 南韩打歌节目的积分规则
+title: 南韩打歌节目的计分规则
 date:   2020-08-10 20:26:11 +0800
 categories: Tech
 excerpt: 南韩打歌节目计分占比，重点介绍三大中最有希望的音乐银行。
