修改文件: _posts/2020-08-12-MCD.md

--- a/_posts/2020-08-12-MCD.md
+++ b/_posts/2020-08-12-MCD.md
@@ -6,7 +6,7 @@ categories: Tech
 excerpt: MCD事前投票占比10%，中饭可以参与的投票主要有日网、全球网和WHOSFAN投票（APP）
 tags:
   - 教程
-  - 打投
+  - 打歌节目
   - MCD投票
 ---
 # 一、打歌节目规则及投票组成
