修改文件: _posts/2020-08-10-南韩打歌节目计分规则.md

--- a/_posts/2020-08-10-南韩打歌节目计分规则.md
+++ b/_posts/2020-08-10-南韩打歌节目计分规则.md
@@ -9,9 +9,13 @@ tags:
   - 音乐银行
 ---
 
-![enter description here](https://wx4.sinaimg.cn/mw690/007ZZwvGly1gdebfsib8fj30x05c8qv5.jpg)
+
+
+
+![打歌3](./images/打歌3.jpg)
+![打歌1](./images/打歌1_1.jpg)
+![打歌2](./images/打歌2.jpg)
 
 
 ### 附：其他打歌节目规则及分数占比
-![enter description here](https://wx4.sinaimg.cn/mw690/007ZZwvGly1gdebftmtudj321n204nkd.jpg)
-
+![打歌4](./images/打歌4.jpg)
