--- a/_posts/2020-08-10-南韩打歌节目计分规则.md
+++ b/_posts/2020-08-10-南韩打歌节目计分规则.md
@@ -9,13 +9,11 @@ tags:
   - 音乐银行
 ---
 
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E6%89%93%E6%AD%8C3.jpg?raw=true)
 
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E6%89%93%E6%AD%8C1.jpg?raw=true)
 
-
-![打歌3](./images/打歌3.jpg)
-![打歌1](./images/打歌1_1.jpg)
-![打歌2](./images/打歌2.jpg)
-
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E6%89%93%E6%AD%8C2.jpg?raw=true)
 
 ### 附：其他打歌节目规则及分数占比
-![打歌4](./images/打歌4.jpg)
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E6%89%93%E6%AD%8C4.jpg?raw=true)
