修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -1,36 +1,36 @@
 ---
-title:2020-08-12-音乐中心mubeat投票
+title: 音乐中心mubeat投票
 layout: post
 date:   2020-08-12 22:12:30 +0800
 categories: Tech
-excerpt: 
+excerpt: Mubeat是音乐中心近期新增的投票app。在进入一位候补后，投票得分按名次计入打歌节目总分，因此音源和销量这些分数依然很重要。
 tags:
   - 教程
   - 打歌节目
   - MUBEAT投票
 ---
 
-Mubeat是音乐中心近期新增的投票app。
-在进入一位候补后，投票得分按名次计入打歌节目总分，因此音源和销量这些分数依然很重要。
+**Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/2/3名分别可获得1000/750/500分。**
+**==在进入一位候补后，投票得分按名次计入打歌节目总分，因此音源和销量这些分数依然很重要。==**
 
-➡️投票得分占总分的10%，1/2/3名分别可获得1000/750/500分，比重较大。
-注意：
-1⃣每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留90天。（登录后不需要梯子也能看广告）
-通过完成任务（图2）也可获得一定数量的hear beat，但到账需要较长时间，且对正确率有要求。
-2⃣同设备投票账号无限制，同账号投票次数无限制，因此这是一个纯靠肝和人数的投票。
-3⃣部分国内邮箱不一定能收到邮件，如果收不到就尽量多试试不同邮箱或选择国际邮箱/SNS。
+
+**注意：
+1.每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留90天。
+2.通过完成任务（图2）也可获得一定数量的hear beat，但到账需要较长时间，且对正确率有要求。
+3.同设备投票账号无限制，同账号投票次数无限制，因此这是一个纯靠肝和人数的投票。
+4.部分国内邮箱不一定能收到邮件，如果收不到就尽量多试试不同邮箱或选择国际邮箱/SNS。
 （目前测试过新浪和雅虎邮箱可以在垃圾邮箱找到，欢迎更多其他邮箱的反馈）
-4⃣付费的心不能投票，所以不要想着氪金变强了😭
-🈲使用临时邮箱（官方有发公告，可能导致无效）
+5.==付费的心不能投票==，所以不要想着氪金变强了😭
+6.🈲使用临时邮箱（官方有发公告，可能导致无效）
+7.若出现看不了广告的情况，请多切冷门线尝试。**
 
-下载方式：
-苹果用户需要切换非大陆id在商店下载mubeat
-安卓用户安装包（经常更新）：
-网页链接 提取码：u104 
-打不开的部分华为用户需要下载ourplay（原谷歌空间），添加安装好的mubeat使用。
+**下载方式：
+1.苹果用户需要切换非大陆id在商店下载mubeat
+2.安卓更新太频繁，[度盘（提取码suju）](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ) 更新不一定及时，可百度下载Qoo APP后搜索mubeat下载。
+打不开的部分华为用户需要下载ourplay（原谷歌空间），添加安装好的mubeat使用。**
 
-目前可进行屯号和屯票工作， 投票时会另行通知。
-
-推特+FB+谷歌+新浪/ 雅虎/谷歌等一切能收到邮件的邮箱，每个人都可以是账号富人[羞嗒嗒][羞嗒嗒][羞嗒嗒] 
-
-🌟新浪邮箱1个手机号最多可以绑定5个邮箱
+**关于账号：
+1.推特+FB+谷歌+新浪/ 雅虎/谷歌等一切能收到邮件的邮箱，每个人都可以是账号富人
+2.很多国内邮箱都收不到邮件，推荐：
+①新浪邮箱1个手机号最多可以绑定5个邮箱
+②protonmail：可以用其他邮箱去注册这个邮箱收取验证邮件，但有限制数量**
