修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -8,13 +8,14 @@ tags:
   - 教程
   - 打歌节目
   - MUBEAT投票
+  - 音乐中心
 ---
 
 **Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/2/3名分别可获得1000/750/500分。**
 **==在进入一位候补后，投票得分按名次计入打歌节目总分，因此音源和销量这些分数依然很重要。==**
 
 
-**注意：
+**注意事项：
 1.每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留90天。
 2.通过完成任务（图2）也可获得一定数量的hear beat，但到账需要较长时间，且对正确率有要求。
 3.同设备投票账号无限制，同账号投票次数无限制，因此这是一个纯靠肝和人数的投票。
