修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -35,3 +35,5 @@ tags:
 2.很多国内邮箱都收不到邮件，推荐：
 ①新浪邮箱1个手机号最多可以绑定5个邮箱
 ②protonmail：可以用其他邮箱去注册这个邮箱收取验证邮件，但有限制数量**
+
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/mubeat.jpg?raw=true)
