修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -37,3 +37,4 @@ tags:
 ②protonmail：可以用其他邮箱去注册这个邮箱收取验证邮件，但有限制数量**
 
 ![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/mubeat.jpg?raw=true)
+![enter description here](./images/mubeat2.jpg)
