修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -33,7 +33,7 @@ grammar_cjkRuby: true
 打不开的部分华为用户需要下载ourplay（原谷歌空间），添加安装好的mubeat使用。**
 
 **关于账号：
-1.推特+FB+谷歌+新浪/ 雅虎/谷歌等一切能收到邮件的邮箱，每个人都可以是账号富人</br>
+1.推特+FB+谷歌+新浪/ 雅虎/谷歌等一切能收到邮件的邮箱，每个人都可以是账号富人
 2.很多国内邮箱都收不到邮件，推荐：
 ①新浪邮箱1个手机号最多可以绑定5个邮箱
 ②protonmail：可以用其他邮箱去注册这个邮箱收取验证邮件，但有限制数量**
