--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -13,11 +13,9 @@ renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
 
-Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/2/3名分别可获得1000/750/500分。
+Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/2/3名分别可获得1000/750/500分。在**进入一位候补后**，投票得分按名次计入打歌节目总分，**因此音源和销量这些分数依然很重要**。
 
-在**进入一位候补后**，投票得分按名次计入打歌节目总分，**因此音源和销量这些分数依然很重要**。
-
- #### 注意事项：
+#### 注意事项：
  - 每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留90天。
  - 通过完成任务（图2）也可获得一定数量的hear beat，但到账需要较长时间，且对正确率有要求。
  - 同设备投票账号无限制，同账号投票次数无限制，因此这是一个纯靠肝和人数的投票。
@@ -28,7 +26,7 @@ Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/
 
 
 
-  #### 下载方式：
+ #### 下载方式：
  - 苹果用户需要切换非大陆id在商店下载mubeat
  - 安卓更新太频繁，[度盘（提取码suju）](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ) 更新不一定及时，可百度下载Qoo APP后搜索mubeat下载。
  - 打不开的部分华为用户需要下载ourplay（原谷歌空间），添加安装好的mubeat使用。
