修改文件: _posts/2020-08-12-音乐中心mubeat投票.md

--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -17,11 +17,11 @@ Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/
 
 #### 注意事项：
 
- 1. 每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留90天。
+ 1. 每个账号每天有15次看广告获得heart beat的机会，北京时间23：00刷新每日次数，可保留**90天**。
  2. 通过完成任务（图2）也可获得一定数量的hear beat，但到账需要较长时间，且对正确率有要求。
  3. 同设备投票账号无限制，同账号投票次数无限制，因此这是一个纯靠肝和人数的投票。
  4. 部分国内邮箱不一定能收到邮件，如果收不到就尽量多试试不同邮箱或选择国际邮箱/SNS。（目前测试过新浪和雅虎邮箱可以在垃圾邮箱找到，欢迎更多其他邮箱的反馈）
- 5. ==付费的心不能投票==，所以不要想着氪金变强了😭
+ 5. **付费的心不能投票**，所以不要想着氪金变强了😭
  6. 🈲使用临时邮箱（官方有发公告，可能导致无效）
  7. 若出现看不了广告的情况，请多切冷门线尝试。
 
