--- a/_posts/2020-08-12-音乐中心mubeat投票.md
+++ b/_posts/2020-08-12-音乐中心mubeat投票.md
@@ -13,7 +13,7 @@ renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
 
-Mubeat是音乐中心近期新增的投票app。投票得分占总分的10%，1/2/3名分别可获得1000/750/500分。在**进入一位候补后**，投票得分按名次计入打歌节目总分，**因此音源和销量这些分数依然很重要**。
+Mubeat是音乐中心近期新增的投票app。**投票得分占总分的10%**，1/2/3名分别可获得1000/750/500分。在**进入一位候补后**，投票得分按名次计入打歌节目总分，**因此音源和销量这些分数依然很重要**。
 
 #### 注意事项：
 
