修改文件: _posts/2020-08-12-冠军秀投票.md

--- a/_posts/2020-08-12-冠军秀投票.md
+++ b/_posts/2020-08-12-冠军秀投票.md
@@ -12,7 +12,14 @@ tags:
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
-###### 事前投票占比20%，分为韩线和非韩线。
-###### 投票时间：每周四17:00-每周日23:00。同设备一天3票，23:00刷新。
-###### 软件IDOLCHAMP，账号注册后需要送心5天才可以投票/做问卷，请务必提前注册。分韩网和全网，可切换线路进入。
+- 事前投票占比20%，分为韩线和非韩线。可通过切换V/P/N线路进入。
+- 投票时间：每周四17:00-每周日23:00。同设备一天3票，23:00刷新。
+- 软件IDOLCHAMP，新账号注册后需要累计送心**5天**才可以投票/做问卷，请务必提前注册。分韩网和全网，可切换线路进入。
 
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%801.jpg?raw=true)
+
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%802.jpg?raw=true)
+
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%803.jpg?raw=true)
+
+![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%804.jpg?raw=true)
