--- a/_posts/2020-08-12-冠军秀投票.md
+++ b/_posts/2020-08-12-冠军秀投票.md
@@ -17,6 +17,8 @@ grammar_cjkRuby: true
 - 同设备一天3票，23:00刷新。
 - 新账号注册后需要累计送心**5天**才可以投票/做问卷，**请务必提前注册**。
 
+[下载地址](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)   提取码：suju
+
 ![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%801.jpg?raw=true)
 
 ![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%802.jpg?raw=true)
