修改文件: _posts/2020-08-12-MCD.md

--- a/_posts/2020-08-12-MCD.md
+++ b/_posts/2020-08-12-MCD.md
@@ -26,4 +26,7 @@ tags:
 # 四、whosfan app投票
 ### 1.投票时间：每周五下午 1 点至第二周周一上午 8 点
 ### 2.每账号投票期间可领取1票用于投票。事前投票不需要刻意攒积分，投票即可。
+[下载地址](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)   提取码：suju
+
+
 ![enter description here](https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/whosfan.jpg?raw=true)
