--- a/_posts/2005-11-06-第一次赶上回归期应该做什么？.markdown
+++ b/_posts/2005-11-06-第一次赶上回归期应该做什么？.markdown
@@ -36,13 +36,9 @@ tags:
 
 QQ浏览器的设置方法如下图
 
-<img src="https://raw.githubusercontent.com/penglanxindong1106/pic/master/007ZZwvGly1gfkw02w18pj30nk2se1kx.jpg" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/plxd1106/pics/raw/master/1.jpg" style="zoom:33%;" />
 
-<img src="https://wx4.sinaimg.cn/large/007ZZwvGly1gfl6xk6t1gj30nk2seb29.jpg" alt="img" style="zoom: 33%;" />
-
-
-
-
+<img src="https://gitee.com/plxd1106/pics/raw/master/2.jpg" style="zoom:33%;" />
 
 ## 四、音源公开后至第二周周一晚23:00（音银结算为周日晚）：
 
