--- a/_posts/2020-08-12-冠军秀投票.markdown
+++ b/_posts/2020-08-12-冠军秀投票.markdown
@@ -17,10 +17,11 @@ grammar_cjkRuby: true
 
 ​    [下载地址](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)   提取码：suju
 
-<img src="https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%801.jpg?raw=true" alt="enter description here" style="zoom:33%;" />
+<img src="https://gitee.com/plxd1106/pics/raw/master/%E5%86%A0%E5%86%9B%E7%A7%801.jpg" alt="冠军秀1" style="zoom:33%;" />
 
-<img src="https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%802.jpg?raw=true" alt="enter description here" style="zoom:33%;" />
 
-<img src="https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%803.jpg?raw=true" alt="enter description here" style="zoom:33%;" />
 
-<img src="https://github.com/plxd1106/plxd1106.github.io/blob/gh-pages/_posts/images/%E5%86%A0%E5%86%9B%E7%A7%804.jpg?raw=true" alt="enter description here" style="zoom:33%;" />
+<img src="images/%E5%86%A0%E5%86%9B%E7%A7%803.jpg" alt="冠军秀3" style="zoom:33%;" />
+
+<img src="https://gitee.com/plxd1106/pics/raw/master/%E5%86%A0%E5%86%9B%E7%A7%804.jpg" alt="冠军秀4" style="zoom:33%;" />
+
