--- a/_posts/2005-11-06-第一次赶上回归期应该做什么？.markdown
+++ b/_posts/2005-11-06-第一次赶上回归期应该做什么？.markdown
@@ -12,8 +12,13 @@ tags:
 ## 一、专辑预售期间：
 
 1. 关注各个站子的预售信息，根据个人需要选择运回裸专/不运回专/特典专，并尽量**在预售首批购买防止断货**（具体看各站子的公告）。**强烈不建议在回归期首周就回血出新专**，为了销量考虑，请稍微等一等。
-2. 下载好回归期的投票、音源APP（[各类APP打包提取码suju](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)），注册好相关账号（[KKT注册教程]([https://plxd05.gitee.io/2020/08/12/KKT%E6%B3%A8%E5%86%8C%E6%95%99%E7%A8%8B.html)   [基尼试听链接教程]([https://plxd05.gitee.io/2020/08/12/%E5%9F%BA%E5%B0%BC%E8%AF%95%E5%90%AC%E9%93%BE%E6%8E%A5%E6%95%99%E7%A8%8B.html)），尽量准备多设备用于打投，有电脑最好。
-3. 至少加入一个打投组或关注打投组/超话，便于及时获知自己应该做什么，有条件的熟练工请积极参与下载、试听总攻，有不懂的地方请及时私信打投组官博提问，看到就会答复。 [微博传送门](https://weibo.com/u/7328949300)
+
+2. 下载好回归期的投票、音源APP（[各类APP打包提取码suju](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)），注册好相关账号（[KKT注册教程](https://plxd1106.gitee.io/2020/08/12/KKT%E6%B3%A8%E5%86%8C%E6%95%99%E7%A8%8B.html)   [基尼试听链接教程](https://plxd1106.gitee.io/2020/08/12/%E5%9F%BA%E5%B0%BC%E8%AF%95%E5%90%AC%E9%93%BE%E6%8E%A5%E6%95%99%E7%A8%8B.html)），尽量准备多设备用于打投，有电脑最好。
+
+3. 至少加入一个打投组或关注打投组/超话，便于及时获知自己应该做什么，有条件的熟练工请积极参与下载、试听总攻，有不懂的地方请及时私信打投组官博提问，看到就会答复。
+
+    [微博传送门](https://weibo.com/u/7328949300)
+
 4. 好好休息，做好接下来一整周都要爆肝的准备
 
 
@@ -22,8 +27,14 @@ tags:
 
 **由于时间仓促来不及制作，这部分内容会指路三瓶盖的教程**
 
-1. 购买瓜/鸡账号并激活，熟悉音源软件操作并按教程设置。[三瓶盖的MELON教程](https://weibo.com/6492162465/IryfA9LDg?filter=hot&root_comment_id=0)  [三瓶盖的Genie教程](https://weibo.com/6492162465/Hq6KeEN1i?filter=hot&root_comment_id=0&type=comment#_rnd1597731265825)
+1. 购买瓜/鸡账号并激活，熟悉音源软件操作并按教程设置。
+
+   [三瓶盖的MELON教程](https://weibo.com/6492162465/IryfA9LDg?filter=hot&root_comment_id=0) 
+
+   [三瓶盖的Genie教程](https://weibo.com/6492162465/Hq6KeEN1i?filter=hot&root_comment_id=0&type=comment#_rnd1597731265825)
+
 2. 准备好点试听链接专用的各类账号，**务必提前熟悉操作方法**。（该账号不是实名账号，不能充套餐，想要自己听歌的账号要去某宝买）[基尼试听链接教程]([https://plxd05.gitee.io/2020/08/12/%E5%9F%BA%E5%B0%BC%E8%AF%95%E5%90%AC%E9%93%BE%E6%8E%A5%E6%95%99%E7%A8%8B.html)
+
 3. 准备好梯子，熟悉刷管教程 [三瓶盖的刷管攻略](https://weibo.com/6492162465/HsTS3g2WG?filter=hot&root_comment_id=0)
 
 ## 三、回归当天17:00前：
@@ -36,9 +47,9 @@ tags:
 
 QQ浏览器的设置方法如下图
 
-<img src="https://gitee.com/plxd1106/pics/raw/master/1.jpg" style="zoom:33%;" />
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/1.jpg" alt="1" style="zoom:33%;" />
 
-<img src="https://gitee.com/plxd1106/pics/raw/master/2.jpg" style="zoom:33%;" />
+
 
 ## 四、音源公开后至第二周周一晚23:00（音银结算为周日晚）：
 
@@ -48,15 +59,15 @@ QQ浏览器的设置方法如下图
 
 ## 五、回归期主要投票：（[各类APP打包提取码suju](https://pan.baidu.com/s/19xXZmG-SM_nCxp82VkmDlQ)）
 
-[点击查看南韩打歌节目计分规则](https://plxd05.gitee.io/2020/08/10/%E5%8D%97%E9%9F%A9%E6%89%93%E6%AD%8C%E8%8A%82%E7%9B%AE%E8%AE%A1%E5%88%86%E8%A7%84%E5%88%99.html)
+[点击查看南韩打歌节目计分规则](https://plxd1106.gitee.io/2020/08/10/%E5%8D%97%E9%9F%A9%E6%89%93%E6%AD%8C%E8%8A%82%E7%9B%AE%E8%AE%A1%E5%88%86%E8%A7%84%E5%88%99.html)
 
-#### THE SHOW（没去打歌就不用投）[教程](https://plxd05.gitee.io/2020/08/12/The-Show-StarPlay%E6%8A%95%E7%A5%A8%E6%95%99%E7%A8%8B.html)
+#### THE SHOW（没去打歌就不用投）[教程](https://plxd1106.gitee.io/2020/08/12/The-Show-StarPlay%E6%8A%95%E7%A5%A8%E6%95%99%E7%A8%8B.html)
 
 事前投票5%：每周五19：00-第二周周一13：00
 
 实时投票10%：每周二17:05-18:05软件STARPLAY，可无限切号。
 
-#### 冠军秀投票 [教程](https://plxd05.gitee.io/tech/2020/08/12/%E5%86%A0%E5%86%9B%E7%A7%80%E6%8A%95%E7%A5%A8.html)
+#### 冠军秀投票 [教程](https://plxd1106.gitee.io/tech/2020/08/12/%E5%86%A0%E5%86%9B%E7%A7%80%E6%8A%95%E7%A5%A8.html)
 
 事前投票占比20%：每周四17:00-每周日23:00
 
@@ -66,7 +77,7 @@ QQ浏览器的设置方法如下图
 
 分韩网和全网，可切换线路进入。
 
-#### MCD投票（没有就不用投）[教程](https://plxd05.gitee.io/tech/2020/08/12/MCD.html)
+#### MCD投票（没有就不用投）[教程](https://plxd1106.gitee.io/tech/2020/08/12/MCD.html)
 
 事前投票10%：首周周五13:00-第二周周一08:00
 
@@ -80,7 +91,7 @@ WHOSFAN投票期间每账号可领取1票。
 
 以上投票均可无限切号。23:00刷新
 
-#### 音乐中心事前投票 [教程](https://plxd05.gitee.io/tech/2020/08/12/%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83mubeat%E6%8A%95%E7%A5%A8.html)
+#### 音乐中心事前投票 [教程](https://plxd1106.gitee.io/tech/2020/08/12/%E9%9F%B3%E4%B9%90%E4%B8%AD%E5%BF%83mubeat%E6%8A%95%E7%A5%A8.html)
 
 投票时间：第二周周一上午17:00至周五上午10:00
 
@@ -89,3 +100,5 @@ WHOSFAN投票期间每账号可领取1票。
 通过看广告和任务攒心，账号投票无上限。氪金的心不能投票，攒的心可存活90天。
 
 该投票是**进入一位候补**后，按照三个一位候补的投票排名先后顺序给分，因此除了努力攒票投票，努力提高其销量、音源成绩也是关键。
+
+![image-20200818211415719](https://pic-1300267894.cos.ap-nanjing.myqcloud.com/image-20200818211415719.png)
