--- a/_posts/2020-08-12-KKT注册教程.markdown
+++ b/_posts/2020-08-12-KKT注册教程.markdown
@@ -6,11 +6,25 @@ tags:
  - 回归期打投
 ---
 
-![img](https://wx3.sinaimg.cn/orj360/007ZZwvGgy1ghtp9wg640j30u01hcjuh.jpg)
-![img](https://wx2.sinaimg.cn/orj360/007ZZwvGgy1ghtp9xnlc8j30u01hcq3w.jpg)
-![img](https://wx4.sinaimg.cn/orj360/007ZZwvGgy1ghtp9y48rbj30u01hc0uy.jpg)
-![img](https://wx4.sinaimg.cn/thumb150/007ZZwvGgy1ghtp9ylwghj30u01hcac3.jpg)
-![img](https://wx4.sinaimg.cn/orj360/007ZZwvGgy1ghtp9zd1j7j30u01hc78z.jpg)
-![img](https://wx3.sinaimg.cn/orj360/007ZZwvGgy1ghtpa02v75j30u01hc76f.jpg)
-![img](https://wx1.sinaimg.cn/orj360/007ZZwvGgy1ghtpa0j6m3j30u01hcjtp.jpg)
-![img](https://wx3.sinaimg.cn/thumb150/007ZZwvGgy1ghtpa1m7olj30u03awkjl.jpg)
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtp9wg640j30u01hcjuh.jpg" alt="image" style="zoom: 33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtp9xnlc8j30u01hcq3w.jpg" alt="image" style="zoom: 33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtp9y48rbj30u01hc0uy.jpg" alt="image" style="zoom:33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtp9ylwghj30u01hcac3.jpg" alt="image" style="zoom:33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtp9zd1j7j30u01hc78z.jpg" alt="image" style="zoom:33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtpa02v75j30u01hc76f.jpg" alt="image" style="zoom:33%;" />
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtpa0j6m3j30u01hcjtp.jpg" alt="image" style="zoom:33%;" />
+
+------
+
+附：OUTLOOK邮箱别名的创建方法。1个outlook=10个邮箱。
+
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtpa1m7olj30u03awkjl.jpg" alt="image" style="zoom:33%;" />
+
+
+
