--- a/_posts/2020-08-12-小黄星投票.markdown
+++ b/_posts/2020-08-12-小黄星投票.markdown
@@ -12,14 +12,14 @@ tags:
 
 无门槛闹钟群（每日提醒闹钟，方便散投玩家） [*O*闹钟提醒](http://t.cn/A6Pd9pPP)
 
-<img src="https://cdn.jsdelivr.net/gh/penglanxindong1106/pic/007ZZwvGgy1ggfixccrx9j30yq2p87wd.jpg" alt="img" style="zoom:50%;" />
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ggfixccrx9j30yq2p87wd.jpg" alt="img" style="zoom:50%;" />
 
 <img src="https://cdn.jsdelivr.net/gh/penglanxindong1106/pic/007ZZwvGgy1ggfixcwqasj30u023s4cj.jpg" alt="img" style="zoom:50%;" />
 
-<img src="https://cdn.jsdelivr.net/gh/penglanxindong1106/pic/007ZZwvGgy1ggfixcwqasj30u023s4cj.jpg" style="zoom:50%;" />
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ggfixcwqasj30u023s4cj.jpg" style="zoom:50%;" />
 
-<img src="https://cdn.jsdelivr.net/gh/penglanxindong1106/pic/007ZZwvGgy1ggfixdddwcj31wx2pgws8.jpg" alt="img" style="zoom:50%;" />
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ggfixdddwcj31wx2pgws8.jpg" alt="img" style="zoom:50%;" />
 
 新下载的APP进不去的看这里
 
-<img src="https://cdn.jsdelivr.net/gh/penglanxindong1106/pic/007ZZwvGgy1ghtrdlb651j30n01dsn0e.jpg" style="zoom:50%;" />
+<img src="https://pic-1300267894.cos.ap-nanjing.myqcloud.com/007ZZwvGgy1ghtrdlb651j30n01dsn0e.jpg" style="zoom:50%;" />
